--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "framer-motion": "^11.3.29",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-mde": "^11.5.0",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
+    "@types/showdown": "^2.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
