--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.3.29",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "nookies": "^2.5.2",
+    "axios": "^1.4.0",
     "react-mde": "^11.5.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
